fix(posts page): navbars content alignment

--- a/src/pages/posts/posts.scss
+++ b/src/pages/posts/posts.scss
@@ -15,6 +15,12 @@ page-posts {
     }
   }
 
+  .posts-page-navbar {
+    .toolbar-title-md {
+      margin-left: -25px;
+    }
+  }
+
   ion-infinite-scroll .infinite-loading-spinner {
     * {
       stroke: color($colors, primary);
@@ -46,6 +52,10 @@ page-posts {
     .menu-go-button {
       width: 65%;
       margin: 5px auto;
+    }
+    .title.title-ios {
+      padding-left: 12px;
+      padding-right: 12px;
     }
   }
 }
